z-index fixes

--- a/res/css/views/rooms/_RoomHeader.pcss
+++ b/res/css/views/rooms/_RoomHeader.pcss
@@ -385,6 +385,7 @@ limitations under the License.
 .mx_xrp_model {
     position: fixed;
     left: 50%;
+    background-color: white;
     top: 40%;
     box-sizing: border-box;
     padding: 15px;
@@ -779,12 +780,12 @@ input[type="range"]::-ms-fill-upper {
    display: none;
    font-size: 19px;
    margin-left: 7px;
-} 
+}
 
 //Responsive Design
 
-@media (max-width: 1024px){ 
+@media (max-width: 1024px){
     .LeftPanel_openBtn{
         display: block;
-     } 
+     }
 }
